style.css
/* BODY */
body {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  margin-bottom: 0;
  font-family: "Raleway", sans-serif;
}
/* //BODY */

/* CONTAINER */
.container {
  display: flex;
  flex-direction: column;
}
/* //CONTAINER */

a {
  text-decoration: none;
}
a:visited {
  text-decoration: none;
  color: black;
}
/* GENERAL */
h1 {
  margin-bottom: 0;
}
h3 {
  font-size: 0.8em;
  font-weight: bold;
}
/* //GENERAL */

/* HEADER */
.logo {
  display: flex;
  align-items: flex-end;
}
header {
  flex-direction: row;
  justify-content: space-between;
  display: flex;
  margin: 0px 30px 10px 30px;
}
#links {
}
#links ul {
  display: flex;
  margin-top: 0;
  margin-bottom: 0;
}
#links li {
  padding: 20px 10px;
  margin: 0 10px;
}
#links li.active {
  border-top: 2px solid #0065fc;
}
#links a {
  text-decoration: none;
  color: grey;
}
#links .active a {
  color: #0065fc;
}
a#login-link {
  color: #0065fc;
  font-weight: bold;
}
/* //HEADER */

/* SEARCHBAR and filter*/
#get-more {
  color: black;
  font-weight: bold;
  width: 100%;
}
#search-and-filter {
  display: flex;
  flex-direction: column;
  margin: 10px 30px 10px 30px;
}
#search-bar {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
}
#search-bar-button {
  color: white;
  background-color: #0065fc;
  padding: 0 10px;
  border-radius: 0 10px 10px 0;
  font-weight: bold;
}
#search-icon {
  display: none;
}
#search-bar-icon,
#search-bar-input,
#search-bar-button {
  height: 40px;
  display: flex;
  align-items: center;
  box-sizing: border-box;
  justify-content: center;
}

#search-bar-input {
  padding: 0 10px;
  font-weight: bold;
  border: 1px solid #f2f2f2;
}
#search-bar-icon {
  padding: 15px 10px;
  background-color: #f2f2f2;
  border-radius: 10px 0 0 10px;
  width: 40px;
}
#filters {
  display: flex;
  align-items: center;
  font-weight: bold;
  flex-wrap: wrap;
}
.filter {
  display: flex;
  border: 1px solid lightgray;
  border-radius: 20px;
  align-items: center;
  margin-right: 10px;
  height: 30px;
}
.filter:hover {
  background-color: #0065fc;
  color: white;
}
#filter-label {
  margin-right: 30px;
}
.filter,
#filter-label {
  margin-bottom: 10px;
}
.filter-icon {
  color: #0065fc;
  position: relative;
  right: 1px;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 32px;
  width: 32px;
  background-color: #deebff;
  border-radius: 20px;
}
.filter span {
  padding-left: 15px;
  padding-right: 15px;
}
#information {
  display: flex;
  align-items: center;
}
#info-logo {
  font-size: 12px;
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #0065fc;
  border: 1px solid lightgrey;
  border-radius: 20px;
  height: 10px;
  width: 10px;
  padding: 5px;
  margin-right: 10px;
}
/* //SEARCHBAR AND FILTER */

/* FONTS */

/* LOGO */

ul {
  list-style-type: none;
}

#hostings {
  display: flex;
  flex-wrap: wrap;
}
#all-hostings img {
  border-radius: 20px 20px 0 0;
}
#popular-hostings img {
  border-radius: 20px 0 0 20px;
}
h2 {
  font-weight: bold;
  font-size: 1.1em;
}
#hostings h3 {
  margin: 0;
  margin-bottom: 3px;
  font-size: 0.8em;
  font-weight: bold;
}
#hostings h4 {
  font-weight: normal;
  font-size: 0.7em;
  margin: 0;
}
.stars {
  font-size: 0.7em;
}
#hostings .blue-star {
  color: #0065fc;
}
#hostings .grey-star {
  color: lightgrey;
}
#all-hostings {
  flex: 2 1 453px;
  background-color: #f2f2f2;
  margin: 10px 15px 10px 30px;
  padding: 10px 20px;
  border-radius: 15px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  row-gap: 20px;
  column-gap: 20px;
}
#all-hostings h2 {
  width: 100%;
}
.all-hosting-bloc {
  flex: 1 0 96px;
  min-width: 30%;
  height: 180px;
  background-color: white;
  margin-bottom: 10px;
  padding: 3px;
  padding-bottom: 5px;
  border-radius: 20px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.all-hosting-bloc img {
  height: 110px;
  object-fit: cover;
}
#popular-hostings {
  flex: 1 1 226px;
  row-gap: 20px;
  background-color: #f2f2f2;
  margin: 10px 30px 10px 15px;
  padding: 10px 20px;
  border-radius: 15px;
  display: flex;
  flex-direction: column;
}
#popular-heading {
  display: flex;
  justify-content: space-between;
}
.popular-bloc {
  display: flex;
  width: 100%;
  height: 122px;
  background-color: white;
  margin-bottom: 10px;
  padding: 3px;
  border-radius: 20px;
  box-sizing: border-box;
}
.popular-bloc img {
  width: 37%;
  object-fit: cover;
}
.popular-aside {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 10px 5px;
}
#all-hostings,
#popular-hostings {
  box-sizing: border-box;
}
.fa-chart-line {
  display: flex;
  align-items: center;
}
#all-hostings h3,
#all-hostings h4,
#popular-hostings h3,
#popular-hostings h4,
.stars {
  padding-left: 8px;
}

/* ACTIVITIES */
#activities {
  display: flex;
  justify-content: space-around;
  height: 420px;
}
#activities img {
  width: 100%;
  object-fit: cover;
  border-radius: 20px 20px 0 0;
}
.activities-bloc {
  display: flex;
  box-sizing: border-box;
  width: 100%;
  margin: 0 15px;
  border-radius: 20px;
}
.activities-bloc h3 {
  display: flex;
  align-items: center;
  padding-left: 8px;
  height: 40px;
  width: 100%;
  margin: 0;
}
.full-bloc {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
}
.full-bloc img {
  height: 380px;
}
.splitted-bloc {
  flex-direction: column;
  row-gap: 20px;
}
.splitted-bloc img {
  height: 160px;
}
.half-bloc {
  display: flex;
  flex-wrap: wrap;
  box-sizing: border-box;
  border-radius: 20px;
}
.full-bloc,
.half-bloc,
.all-hosting-bloc,
.popular-bloc {
  box-shadow: 0 1px 8px lightgrey;
}
#activities-container {
  margin-right: 20px;
  margin-left: 20px;
}
#activities-container h2 {
  margin-left: 15px;
}

footer {
  margin-top: 30px;
  padding-left: 30px;
  display: flex;
  flex-direction: row;
  background-color: #f2f2f2;
  align-items: flex-start;
}
footer div {
  width: 33%;
  display: flex;
  flex-direction: column;
}
footer ul {
  padding: 0;
  margin-top: 0;
}
footer li {
  color: black;
  margin-top: 16px;
}
footer a {
  color: black;
}
footer h3 {
  margin-bottom: 0;
  font-size: 1em;
}

/*  Tablettes et smartphones (Ipad Pro exclu) */
@media only screen and (max-width: 768px) {
  header {
    flex-wrap: wrap;
    margin-left: 0;
    margin-right: 0;
  }
  #login-link-element {
    position: absolute;
    right: 0;
    top: 14px;
  }
  .logo {
    width: 100%;
    padding-left: 20px;
    padding-top: 20px;
  }
  #links {
    width: 100%;
  }
  #links ul {
    padding: 0;
    width: 100%;
  }
  #links ul li:not(#login-link-element) {
    width: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 0;
    margin-right: 0;
  }
  #links li.active {
    border-bottom: 2px solid #0065fc;
    border-top: 0;
  }
  #search-and-filter {
    margin: 10px 20px;
  }
  #search-bar {
    display: flex;
  }
  #search-bar-input {
    flex: 1;
    border-radius: 0 10px 10px 0;
  }
  #search-icon {
    display: block;
  }
  #search-text {
    display: none;
  }
  #search-bar-button {
    position: absolute;
    right: 20px;
    border-radius: 10px;
    width: 40px;
  }
  #information {
    align-items: flex-start;
  }
  #hostings {
    flex-direction: column;
  }
  #all-hostings,
  #popular-hostings {
    margin-left: 0;
    margin-right: 0;
  }
  #all-hostings {
    background-color: white;
    order: 1;
    border-radius: 0;
    row-gap: 0;
  }
  .all-hosting-bloc {
    margin-bottom: 20px;
  }
  #popular-hostings {
    border-radius: 0;
    row-gap: 0;
  }
  .popular-bloc {
    margin-bottom: 20px;
  }
  #activities {
    flex-direction: column;
    height: auto;
  }
  #activities-container h2 {
    margin-left: 0;
  }
  .full-bloc,
  .half-bloc {
    margin-bottom: 20px;
  }
  .splitted-bloc {
    row-gap: 0;
  }
  .activities-bloc {
    margin-top: 0;
    margin-right: 0;
    margin-left: 0;
  }
  .activities-bloc img {
    height: 125px;
  }
  footer {
    flex-direction: column;
  }
  footer div {
    width: 100%;
  }
}

/* Smartphones (portrait and landscape) */
@media only screen and (max-width: 480px) {
  #all-hostings {
    flex-direction: column;
  }
  #filter-label {
    width: 100%;
  }
}

